--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://mamimikun.github.io/'
 languageCode = 'en-us'
-title = 'mamimikun personal website'
+title = 'mamimikun'
 theme = 'mamimikun_theme'
 [caches]
   [caches.images]
